--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -59,6 +59,7 @@ nav:
           - STM32软件复位: Embedded System/STM32/application/stm32_sw_reset.md
       
         - Master:
+          - newlib与可重入: Embedded System/STM32/master/newlib_reentrant.md
           - STM32的三种启动方式: Embedded System/STM32/master/stm32_boot_configure.md
           - STM32在SRAM中运行代码: Embedded System/STM32/master/stm32_run_code_in_ram.md
           - STM32的启动流程: Embedded System/STM32/master/stm32_boot.md
