--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -144,6 +144,7 @@ nav:
             - VSCode与CMake搭配使用之基本配置: Embedded System/linux/compiler/cmake/vscode_cmake_base.md
             - VSCode与CMake搭配使用之交叉编译: Embedded System/linux/compiler/cmake/vscode_camke_cross_compile.md
           - 交叉编译:
+            - cmake-stm32: Embedded System/linux/compiler/cross_compile/cmake_stm32.md
             - 交叉编译的方法: Embedded System/linux/compiler/cross_compile/corss_compile.md
             - 交叉编译器默认的头文件和库文件搜索路径: Embedded System/linux/compiler/cross_compile/cross_compiler_default_search_path.md
             - CMake交叉编译: Embedded System/linux/compiler/cmake/cmake_cross_compile.md
@@ -258,6 +259,7 @@ nav:
         - 配置参数: Tools/VPN/ss_parameter.md
         - Shadowsocks Ubuntu客户端: Tools/VPN/Shadowsocks_client_for_ubuntu.md
         - ShadowsocksR Ubuntu客户端: Tools/VPN/ShadowsocksR_client_for_ubuntu.md
+        - SSR For Ubuntu: Tools/VPN/ssr_client_for_ubuntu.md
         - ShadowsocksR Ubuntu服务端: Tools/VPN/ShadowsocksR_server_for_ubuntu.md
 
       - VIM:
