--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -145,6 +145,7 @@ nav:
             - VSCode与CMake搭配使用之交叉编译: Embedded System/linux/compiler/cmake/vscode_camke_cross_compile.md
           - 交叉编译:
             - cmake-stm32: Embedded System/linux/compiler/cross_compile/cmake_stm32.md
+            - VSCode-STM32: Embedded System/linux/compiler/cross_compile/develop_stm32_using_vscode.md
             - 交叉编译的方法: Embedded System/linux/compiler/cross_compile/corss_compile.md
             - 交叉编译器默认的头文件和库文件搜索路径: Embedded System/linux/compiler/cross_compile/cross_compiler_default_search_path.md
             - CMake交叉编译: Embedded System/linux/compiler/cmake/cmake_cross_compile.md
