--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -92,6 +92,7 @@ nav:
           - 步进电机: Embedded System/STM32/motor_control/stepper_motor_driver_chip.md
           - STM32控制42步进电机: Embedded System/STM32/motor_control/stm32_io_drive_42stepper_l298n.md
         - STM32开发神兵利器:
+          - OpenOCD: Embedded System/STM32/tools/openocd.md
           - JScope RTT模式: Embedded System/STM32/tools/jscope_rtt.md
           - JScope HSS模式: Embedded System/STM32/tools/jscope_hss.md
           - JLink RTT: Embedded System/STM32/tools/rtt.md
