--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -85,7 +85,9 @@ nav:
           - STM32定时器编程之PWM: Embedded System/STM32/peripheral/stm32_hal_uart.md
           - STM32定时器之产生固定个数的脉冲: Embedded System/STM32/peripheral/stm32_generate_n_number_pluse.md
           - STM32ADC: Embedded System/STM32/peripheral/stm32_adc.md
-          - SPI总线: Embedded System/spi_bus.md
+        - 通信接口:
+          - SPI总线: Embedded System/STM32/communication_interface/spi_bus.md
+          - 以太网: Embedded System/STM32/communication_interface/ethernet.md
         - Motor Control: 
           - 转矩: Embedded System/STM32/motor_control/torque.md
           - 直流刷式电机: Embedded System/STM32/motor_control/dc_motor_driver_chip.md
