--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -88,6 +88,7 @@ nav:
         - 通信接口:
           - SPI总线: Embedded System/STM32/communication_interface/spi_bus.md
           - 以太网: Embedded System/STM32/communication_interface/ethernet.md
+          - CAN总线: Embedded System/STM32/communication_interface/CAN_bus.md
         - Motor Control: 
           - 转矩: Embedded System/STM32/motor_control/torque.md
           - 直流刷式电机: Embedded System/STM32/motor_control/dc_motor_driver_chip.md
@@ -99,6 +100,9 @@ nav:
           - JScope HSS模式: Embedded System/STM32/tools/jscope_hss.md
           - JLink RTT: Embedded System/STM32/tools/rtt.md
           - STM32经典书籍: Embedded System/STM32/tools/stm32_books.md
+
+    - STM8:
+        - ADC: Embedded System/STM8/adc.md
 
     - Linux:
         - C/C++: 
