--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -159,6 +159,8 @@ nav:
             - 交叉编译器默认的头文件和库文件搜索路径: Embedded System/linux/compiler/cross_compile/cross_compiler_default_search_path.md
             - CMake交叉编译: Embedded System/linux/compiler/cmake/cmake_cross_compile.md
             - VSCode与CMake搭配使用之交叉编译: Embedded System/linux/compiler/cmake/vscode_camke_cross_compile.md
+          - Debug:
+            - ARM-Linux GDB远程调试: Embedded System/linux/debug/arm_linux_gdb_debug.md
           - GNU make中的2种变量: Embedded System/linux/compiler/gnu_make_two_flavors_of_variables.md
           - GCC编译动态链接库: Embedded System/linux/compiler/gcc/gcc_dynamic_linking_library.md
           - GCC&Clang&LLVM的关系: Embedded System/linux/compiler/gcc_clang_llvm.md
