--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -88,6 +88,7 @@ nav:
           - STM32定时器之产生固定个数的脉冲: Embedded System/STM32/peripheral/stm32_generate_n_number_pluse.md
           - STM32ADC: Embedded System/STM32/peripheral/stm32_adc.md
         - 通信接口:
+          - I2C总线: Embedded System/STM32/communication_interface/i2c_bus.md
           - SPI总线: Embedded System/STM32/communication_interface/spi_bus.md
           - 以太网: Embedded System/STM32/communication_interface/ethernet.md
           - CAN总线: Embedded System/STM32/communication_interface/CAN_bus.md
@@ -103,8 +104,8 @@ nav:
           - JLink RTT: Embedded System/STM32/tools/rtt.md
           - STM32经典书籍: Embedded System/STM32/tools/stm32_books.md
 
-    - STM8:
-        - ADC: Embedded System/STM8/adc.md
+        - STM8:
+          - ADC: Embedded System/STM8/adc.md
 
     - Linux:
         - C/C++: 
