--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -92,6 +92,7 @@ nav:
           - SPI总线: Embedded System/STM32/communication_interface/spi_bus.md
           - 以太网: Embedded System/STM32/communication_interface/ethernet.md
           - CAN总线: Embedded System/STM32/communication_interface/CAN_bus.md
+          - STM32 CAN接口: Embedded System/STM32/communication_interface/STM32_CAN_Application.md
         - Motor Control: 
           - 转矩: Embedded System/STM32/motor_control/torque.md
           - 直流刷式电机: Embedded System/STM32/motor_control/dc_motor_driver_chip.md
@@ -106,6 +107,11 @@ nav:
 
         - STM8:
           - ADC: Embedded System/STM8/adc.md
+
+    - Wireless:
+        - Bluetooth:
+          - Bluetooth Base: Embedded System/wireless/bluetooth/bluetooth_base.md
+          - Bluetooth Stack: Embedded System/wireless/bluetooth/protocal_stack.md
 
     - Linux:
         - C/C++: 
