--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -91,8 +91,10 @@ nav:
           - I2C总线: Embedded System/STM32/communication_interface/i2c_bus.md
           - SPI总线: Embedded System/STM32/communication_interface/spi_bus.md
           - 以太网: Embedded System/STM32/communication_interface/ethernet.md
-          - CAN总线: Embedded System/STM32/communication_interface/CAN_bus.md
-          - STM32 CAN接口: Embedded System/STM32/communication_interface/STM32_CAN_Application.md
+          - CAN总线: 
+            -CAN Bus: Embedded System/STM32/communication_interface/CAN_bus.md
+            - STM32 CAN接口: Embedded System/STM32/communication_interface/STM32_CAN_Application.md
+            - CANopen: Embedded System/STM32/communication_interface/CAN/CANopen.md
         - Motor Control: 
           - 转矩: Embedded System/STM32/motor_control/torque.md
           - 直流刷式电机: Embedded System/STM32/motor_control/dc_motor_driver_chip.md
