--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -97,6 +97,7 @@ nav:
             - CANopen: Embedded System/STM32/communication_interface/CAN/CANopen.md
         - Motor Control: 
           - 转矩: Embedded System/STM32/motor_control/torque.md
+          - 无刷电机: Embedded System/STM32/motor_control/brushless_motor.md
           - 直流刷式电机: Embedded System/STM32/motor_control/dc_motor_driver_chip.md
           - 步进电机: Embedded System/STM32/motor_control/stepper_motor_driver_chip.md
           - STM32控制42步进电机: Embedded System/STM32/motor_control/stm32_io_drive_42stepper_l298n.md
