--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -109,7 +109,11 @@ nav:
               - Bluetooth Base: Embedded System/wireless/bluetooth/bluetooth_base.md
               - Bluetooth Stack: Embedded System/wireless/bluetooth/protocal_stack.md
             - UWB:
-              - UWB测距算法: 
+              - UWB测距算法: Embedded System/wireless/UWB/uwb_Ranging_Techniques.md
+    
+    - Robot:
+        - 平衡车: Robot/two_wheel_balance_car.md
+
     - RTOS:
         - FreeRTOS:
           - 任务切换: Embedded System/RTOS/freertos/task_switch.md
